Begin implementing public interface for server/peer info
These will be consumed by a gRPC service. The server has a public
interface that returns basic information, and a snapshotted list of peer
status/info.

Also some small drive-by fixes.

--- a/protocols/bgp/server/BUILD.bazel
+++ b/protocols/bgp/server/BUILD.bazel
@@ -41,6 +41,7 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "server_test.go",
         "update_helper_test.go",
         "withdraw_test.go",
     ],
@@ -49,6 +50,7 @@ go_test(
         "//net:go_default_library",
         "//protocols/bgp/packet:go_default_library",
         "//route:go_default_library",
+        "//routingtable/locRIB:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
     ],
 )
