Fix coverage calculation

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ script:
 - mkdir -p $HOME/gopath/src/github.com/bio-routing/
 - ln -s $TRAVIS_BUILD_DIR $HOME/gopath/src/github.com/bio-routing/bio-rd || true
 - cp .bazelrc.travis .bazelrc
-- bazel coverage //...
 - bazel build //vendor/github.com/mattn/goveralls
+- bazel test //...
+- bazel coverage //...
 - bazel-bin/vendor/github.com/mattn/goveralls/linux_amd64_stripped/goveralls -coverprofile=$(find bazel-testlogs/ -name coverage.dat | paste -sd "," -)
 
