--- a/protocols/bgp/server/BUILD.bazel
+++ b/protocols/bgp/server/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "fsm2.go",
+        "fsm.go",
         "fsm_active.go",
         "fsm_cease.go",
         "fsm_connect.go",
@@ -32,7 +32,6 @@ go_library(
         "//routingtable:go_default_library",
         "//routingtable/adjRIBIn:go_default_library",
         "//routingtable/adjRIBOut:go_default_library",
-        "//routingtable/adjRIBOutAddPath:go_default_library",
         "//routingtable/filter:go_default_library",
         "//vendor/github.com/sirupsen/logrus:go_default_library",
     ],
