--- a/routingtable/BUILD.bazel
+++ b/routingtable/BUILD.bazel
@@ -26,6 +26,7 @@ go_test(
     name = "go_default_test",
     srcs = [
         "client_manager_test.go",
+	"contributing_asn_list_test.go",
         "table_test.go",
         "trie_test.go",
         "update_helper_test.go",
