--- a/testing/BUILD.bazel
+++ b/testing/BUILD.bazel
@@ -2,8 +2,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["paths.go"],
-    importmap = "vendor/github.com/golang/dep/gps/paths",
-    importpath = "github.com/golang/dep/gps/paths",
+    srcs = ["conn_mock.go"],
+    importpath = "github.com/bio-routing/bio-rd/testing",
     visibility = ["//visibility:public"],
 )
