--- a/routingtable/BUILD.bazel
+++ b/routingtable/BUILD.bazel
@@ -18,7 +18,6 @@ go_library(
         "//net:go_default_library",
         "//protocols/bgp/packet:go_default_library",
         "//route:go_default_library",
-        "//vendor/github.com/sirupsen/logrus:go_default_library",
     ],
 )
 
@@ -34,6 +33,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//net:go_default_library",
+        "//protocols/bgp/packet:go_default_library",
         "//route:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
     ],
