--- a/protocols/bgp/server/BUILD.bazel
+++ b/protocols/bgp/server/BUILD.bazel
@@ -19,7 +19,6 @@ go_library(
         "tcplistener.go",
         "update_helper.go",
         "update_sender.go",
-        "update_sender_add_path.go",
         "util.go",
         "withdraw.go",
     ],
@@ -29,6 +28,7 @@ go_library(
         "//config:go_default_library",
         "//net:go_default_library",
         "//protocols/bgp/packet:go_default_library",
+        "//protocols/bgp/types:go_default_library",
         "//route:go_default_library",
         "//routingtable:go_default_library",
         "//routingtable/adjRIBIn:go_default_library",
@@ -42,6 +42,7 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "fsm_established_test.go",
         "fsm_open_sent_test.go",
         "fsm_test.go",
         "server_test.go",
