--- a/protocols/bgp/types/BUILD.bazel
+++ b/protocols/bgp/types/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "as_path.go",
         "community.go",
         "large_community.go",
+        "options.go",
         "unknown_attribute.go",
     ],
     importpath = "github.com/bio-routing/bio-rd/protocols/bgp/types",
