--- a/route/BUILD.bazel
+++ b/route/BUILD.bazel
@@ -29,7 +29,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//net:go_default_library",
-        "//protocols/bgp/packet:go_default_library",
+        "//protocols/bgp/types:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
     ],
 )
