--- a/protocols/bgp/packet/BUILD.bazel
+++ b/protocols/bgp/packet/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
     importpath = "github.com/bio-routing/bio-rd/protocols/bgp/packet",
     visibility = ["//visibility:public"],
     deps = [
+        "//net:go_default_library",
         "//protocols/bgp/types:go_default_library",
         "//route:go_default_library",
         "//vendor/github.com/taktv6/tflow2/convert:go_default_library",
