--- a/protocols/bgp/server/BUILD.bazel
+++ b/protocols/bgp/server/BUILD.bazel
@@ -54,6 +54,7 @@ go_test(
         "//config:go_default_library",
         "//net:go_default_library",
         "//protocols/bgp/packet:go_default_library",
+        "//protocols/bgp/types:go_default_library",
         "//route:go_default_library",
         "//routingtable:go_default_library",
         "//routingtable/filter:go_default_library",
