--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/bio-routing/bio-rd/config",
     visibility = ["//visibility:public"],
     deps = [
+        "//net:go_default_library",
         "//routingtable:go_default_library",
         "//routingtable/filter:go_default_library",
         "//vendor/github.com/taktv6/tflow2/convert:go_default_library",
