Fixing update sender

--- a/protocols/bgp/server/BUILD.bazel
+++ b/protocols/bgp/server/BUILD.bazel
@@ -47,6 +47,7 @@ go_test(
         "fsm_test.go",
         "server_test.go",
         "update_helper_test.go",
+        "update_sender_test.go",
         "withdraw_test.go",
     ],
     embed = [":go_default_library"],
@@ -54,6 +55,7 @@ go_test(
         "//config:go_default_library",
         "//net:go_default_library",
         "//protocols/bgp/packet:go_default_library",
+        "//protocols/bgp/types:go_default_library",
         "//route:go_default_library",
         "//routingtable:go_default_library",
         "//routingtable/filter:go_default_library",
