--- a/protocols/bgp/packet/BUILD.bazel
+++ b/protocols/bgp/packet/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "bgp.go",
         "decoder.go",
         "encoder.go",
+        "mp_reach_nlri.go",
         "nlri.go",
         "parameters.go",
         "path_attribute_flags.go",
@@ -27,6 +28,7 @@ go_test(
     srcs = [
         "decoder_test.go",
         "encoder_test.go",
+        "mp_reach_nlri_test.go",
         "nlri_test.go",
         "path_attributes_test.go",
     ],
