--- a/protocols/bgp/packet/BUILD.bazel
+++ b/protocols/bgp/packet/BUILD.bazel
@@ -6,7 +6,9 @@ go_library(
         "bgp.go",
         "decoder.go",
         "encoder.go",
+        "helper.go",
         "mp_reach_nlri.go",
+        "mp_unreach_nlri.go",
         "nlri.go",
         "parameters.go",
         "path_attribute_flags.go",
@@ -29,6 +31,7 @@ go_test(
         "decoder_test.go",
         "encoder_test.go",
         "mp_reach_nlri_test.go",
+        "mp_unreach_nlri_test.go",
         "nlri_test.go",
         "path_attributes_test.go",
     ],
