--- a/route/BUILD.bazel
+++ b/route/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
     deps = [
         "//net:go_default_library",
         "//protocols/bgp/types:go_default_library",
+        "//vendor/github.com/taktv6/tflow2/convert:go_default_library",
     ],
 )
 
