--- a/protocols/bgp/server/BUILD.bazel
+++ b/protocols/bgp/server/BUILD.bazel
@@ -4,9 +4,9 @@ go_library(
     name = "go_default_library",
     srcs = [
         "fake_conn.go",
-        "family_routing.go",
         "fsm.go",
         "fsm_active.go",
+        "fsm_address_family.go",
         "fsm_cease.go",
         "fsm_connect.go",
         "fsm_established.go",
@@ -43,7 +43,7 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
-        "family_routing_test.go",
+        "fsm_address_family_test.go",
         "fsm_open_sent_test.go",
         "fsm_test.go",
         "server_test.go",
