writing routes to routing table and implement simple updating via netlink

--- a/protocols/bgp/packet/BUILD.bazel
+++ b/protocols/bgp/packet/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "bgp.go",
         "decoder.go",
         "encoder.go",
+        "fuzzing.go",
         "helper.go",
         "mp_reach_nlri.go",
         "mp_unreach_nlri.go",
