--- a/routingtable/BUILD.bazel
+++ b/routingtable/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//net:go_default_library",
         "//protocols/bgp/types:go_default_library",
         "//route:go_default_library",
+        "//vendor/github.com/sirupsen/logrus:go_default_library",
     ],
 )
 
