--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -20,7 +20,7 @@ go_library(
         "//config:go_default_library",
         "//net:go_default_library",
         "//protocols/bgp/server:go_default_library",
-        "//routingtable:go_default_library",
+        "//protocols/system/netlink:go_default_library",
         "//routingtable/filter:go_default_library",
         "//routingtable/locRIB:go_default_library",
         "//vendor/github.com/sirupsen/logrus:go_default_library",
