--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@ required = ["github.com/golang/dep", "github.com/q3k/goveralls", "github.com/go-
 [[constraint]]
   name = "github.com/spf13/viper"
   version = "1.0.2"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/mitchellh/go-homedir"
