--- a/protocols/isis/packet/BUILD.bazel
+++ b/protocols/isis/packet/BUILD.bazel
@@ -4,13 +4,11 @@ go_library(
     name = "go_default_library",
     srcs = [
         "csnp.go",
-        "decoder.go",
         "header.go",
         "hello.go",
         "isis.go",
         "lsp.go",
         "lsp_entry.go",
-        "math.go",
         "psnp.go",
         "tlv.go",
         "tlv_area_addresses.go",
@@ -25,13 +23,15 @@ go_library(
         "tlv_p2p_adj_state.go",
         "tlv_padding.go",
         "tlv_protocols_supported.go",
+        "tlv_unknown.go",
     ],
     importpath = "github.com/bio-routing/bio-rd/protocols/isis/packet",
     visibility = ["//visibility:public"],
     deps = [
         "//protocols/isis/types:go_default_library",
+        "//util/decode:go_default_library",
+        "//util/math:go_default_library",
         "//vendor/github.com/FMNSSun/libhash/fletcher:go_default_library",
-        "//vendor/github.com/sirupsen/logrus:go_default_library",
         "//vendor/github.com/taktv6/tflow2/convert:go_default_library",
     ],
 )
@@ -40,10 +40,14 @@ go_test(
     name = "go_default_test",
     srcs = [
         "csnp_test.go",
+        "header_test.go",
         "hello_test.go",
         "isis_test.go",
         "lsp_test.go",
         "psnp_test.go",
+        "tlv_area_addresses_test.go",
+        "tlv_padding_test.go",
+        "tlv_unknown_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
