--- a/protocols/isis/packet/BUILD.bazel
+++ b/protocols/isis/packet/BUILD.bazel
@@ -46,7 +46,13 @@ go_test(
         "lsp_test.go",
         "psnp_test.go",
         "tlv_area_addresses_test.go",
+        "tlv_checksum_test.go",
+        "tlv_dynamic_hostname_test.go",
+        "tlv_ip_interface_address_test.go",
+        "tlv_is_neighbors_test.go",
+        "tlv_p2p_adj_state_test.go",
         "tlv_padding_test.go",
+        "tlv_protocols_supported_test.go",
         "tlv_unknown_test.go",
     ],
     embed = [":go_default_library"],
