--- a/testing/BUILD.bazel
+++ b/testing/BUILD.bazel
@@ -2,9 +2,13 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["conn_mock.go"],
+    srcs = [
+        "conn_mock.go",
+        "log.go",
+    ],
     importpath = "github.com/bio-routing/bio-rd/testing",
     visibility = ["//visibility:public"],
+    deps = ["//vendor/github.com/sirupsen/logrus:go_default_library"],
 )
 
 go_test(
