--- a/apps/bmp-streamer/BUILD.bazel
+++ b/apps/bmp-streamer/BUILD.bazel
@@ -7,12 +7,13 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//apps/bmp-streamer/pkg/apiserver:go_default_library",
-        "//apps/bmp-streamer/pkg/bmpsrvapi:go_default_library",
+        "//apps/bmp-streamer/pkg/bmpstreamer:go_default_library",
         "//apps/bmp-streamer/pkg/config:go_default_library",
+        "//lib/grpchelper:go_default_library",
         "//protocols/bgp/server:go_default_library",
-        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
-        "@com_github_sirupsen_logrus//:go_default_library",
-        "@org_golang_google_grpc//:go_default_library",
+        "//vendor/github.com/grpc-ecosystem/go-grpc-prometheus:go_default_library",
+        "//vendor/github.com/sirupsen/logrus:go_default_library",
+        "//vendor/google.golang.org/grpc:go_default_library",
     ],
 )
 
