--- a/apps/bmp-streamer/client/BUILD.bazel
+++ b/apps/bmp-streamer/client/BUILD.bazel
@@ -6,10 +6,11 @@ go_library(
     importpath = "github.com/bio-routing/bio-rd/apps/bmp-streamer/client",
     visibility = ["//visibility:private"],
     deps = [
-        "//apps/bmp-streamer/pkg/bmpsrvapi:go_default_library",
+        "//apps/bmp-streamer/pkg/bmpstreamer:go_default_library",
         "//net:go_default_library",
-        "@com_github_sirupsen_logrus//:go_default_library",
-        "@org_golang_google_grpc//:go_default_library",
+        "//net/api:go_default_library",
+        "//vendor/github.com/sirupsen/logrus:go_default_library",
+        "//vendor/google.golang.org/grpc:go_default_library",
     ],
 )
 
