--- a/apps/bmp-streamer/pkg/config/BUILD.bazel
+++ b/apps/bmp-streamer/pkg/config/BUILD.bazel
@@ -5,5 +5,5 @@ go_library(
     srcs = ["config.go"],
     importpath = "github.com/bio-routing/bio-rd/apps/bmp-streamer/pkg/config",
     visibility = ["//visibility:public"],
-    deps = ["@in_gopkg_yaml_v2//:go_default_library"],
+    deps = ["//vendor/gopkg.in/yaml.v2:go_default_library"],
 )
