gazelle: don't break vendored grpc

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,7 @@
 load("@bazel_gazelle//:def.bzl", "gazelle")
 
 # gazelle:prefix github.com/bio-routing/bio-rd
+# gazelle:resolve go google.golang.org/grpc //vendor/google.golang.org/grpc:go_default_library
 gazelle(
     name = "gazelle",
     external = "vendored",
