--- a/apps/bmp-streamer/pkg/apiserver/BUILD.bazel
+++ b/apps/bmp-streamer/pkg/apiserver/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//apps/bmp-streamer/pkg/bmpstreamer:go_default_library",
         "//net:go_default_library",
+        "//net/api:go_default_library",
         "//protocols/bgp/packet:go_default_library",
         "//protocols/bgp/server:go_default_library",
         "//route:go_default_library",
