--- a/net/api/BUILD.bazel
+++ b/net/api/BUILD.bazel
@@ -12,6 +12,9 @@ go_proto_library(
     importpath = "github.com/bio-routing/bio-rd/net/api",
     proto = ":api_proto",
     visibility = ["//visibility:public"],
+    deps = [
+        "//vendor/github.com/golang/protobuf/proto:go_default_library"
+    ],
 )
 
 go_library(
