--- a/net/api/BUILD.bazel
+++ b/net/api/BUILD.bazel
@@ -22,4 +22,7 @@ go_library(
     embed = [":api_go_proto"],
     importpath = "github.com/bio-routing/bio-rd/net/api",
     visibility = ["//visibility:public"],
+    deps = [
+        "//vendor/github.com/golang/protobuf/proto:go_default_library"
+    ],
 )
