--- a/route/api/BUILD.bazel
+++ b/route/api/BUILD.bazel
@@ -24,4 +24,8 @@ go_library(
     embed = [":api_go_proto"],
     importpath = "github.com/bio-routing/bio-rd/route/api",
     visibility = ["//visibility:public"],
+    deps = [
+        "//net/api:go_default_library",
+        "//vendor/github.com/golang/protobuf/proto:go_default_library",
+    ],
 )
