--- a/apps/bmp-streamer/pkg/bmpstreamer/BUILD.bazel
+++ b/apps/bmp-streamer/pkg/bmpstreamer/BUILD.bazel
@@ -22,6 +22,7 @@ go_proto_library(
         "//route/api:go_default_library",
         "//vendor/google.golang.org/grpc:go_default_library",
         "//vendor/github.com/golang/protobuf/proto:go_default_library",
+        "//vendor/golang.org/x/net/context:go_default_library",
     ],
 )
 
