--- a/net/api/BUILD.bazel
+++ b/net/api/BUILD.bazel
@@ -13,7 +13,7 @@ go_proto_library(
     proto = ":api_proto",
     visibility = ["//visibility:public"],
     deps = [
-        "//vendor/github.com/golang/protobuf/proto:go_default_library"
+        "//vendor/github.com/golang/protobuf/proto:go_default_library",
     ],
 )
 
@@ -23,6 +23,6 @@ go_library(
     importpath = "github.com/bio-routing/bio-rd/net/api",
     visibility = ["//visibility:public"],
     deps = [
-        "//vendor/github.com/golang/protobuf/proto:go_default_library"
+        "//vendor/github.com/golang/protobuf/proto:go_default_library",
     ],
 )
