--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
 - mkdir -p $HOME/gopath/src/github.com/bio-routing/
 - ln -s $TRAVIS_BUILD_DIR $HOME/gopath/src/github.com/bio-routing/bio-rd || true
 - cd $HOME/gopath/src/github.com/bio-routing/bio-rd
-- go test -v -cover -race -coverprofile=coverage.out ./...
+- go test -v -cover -coverprofile=coverage.out ./...
 - go install github.com/bio-routing/bio-rd/vendor/github.com/q3k/goveralls/
 - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -merge=false
 
