--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@ required = ["github.com/golang/dep", "github.com/q3k/goveralls", "github.com/go-
 [[constraint]]
   branch = "master"
   name = "github.com/FMNSSun/libhash"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/q3k/statusz"
