--- a/cmd/bio-rd/bio-rd.yml
+++ b/cmd/bio-rd/bio-rd.yml
@@ -77,3 +77,11 @@ protocols:
             peer_as: 65300
             import: ["PeerB-In"]
             export: ["ACCEPT_ALL"]
+  isis:
+    NETs: ["49.0001.0000.0000.0000.0001.00"]
+    level1:
+      disable: true
+    interfaces:
+      - name: "tap0"
+        level2:
+          metric: 10
