--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 # Test binary, build with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Output of the go coverage tool
+coverage.txt
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
