Add support for passive interfaces

--- a/cmd/bio-rd/bio-rd.yml
+++ b/cmd/bio-rd/bio-rd.yml
@@ -85,3 +85,7 @@ protocols:
       - name: "tap0"
         level2:
           metric: 10
+      - name: "lo"
+        passive: true
+        level2:
+          metric: 0
