--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.16.x, 1.17.x]
+        go-version: [1.17.x]
         platform: [ubuntu-latest, ubuntu-18.04]
     runs-on: ${{ matrix.platform }}
     steps:
