--- a/docker/bio-rd/Dockerfile
+++ b/docker/bio-rd/Dockerfile
@@ -1,13 +1,17 @@
 FROM golang as builder
-ADD . /go/bio
-WORKDIR /go/bio/cmd/bio-rd
+ADD . /go/bio-rd
+WORKDIR /go/bio-rd/cmd/bio-rd
 RUN GOOS=linux go build -o /go/bin/bio-rd
 
 FROM debian:stable
 WORKDIR /app
-ENV CMD_ARGS="--config.file=/config/bio-rd.yml"
 COPY --from=builder /go/bin/bio-rd .
-CMD /app/bio-rd ${CMD_ARGS}
+CMD /app/bio-rd --config.file=/config/bio-rd.yml ${CMD_ARGS}
+#RUN apt update && \
+#    apt install -y libcap2-bin && \
+#    setcap cap_net_raw,cap_net_admin,cap_net_bind_service+eip /app/bio-rd && \
+#    useradd --system bio-rd
+#USER bio-rd
 VOLUME /config
 EXPOSE 179
 EXPOSE 5566
