--- a/docker/bio-rd/Dockerfile
+++ b/docker/bio-rd/Dockerfile
@@ -7,11 +7,11 @@ FROM debian:stable
 WORKDIR /app
 COPY --from=builder /go/bin/bio-rd .
 CMD /app/bio-rd --config.file=/config/bio-rd.yml ${CMD_ARGS}
-#RUN apt update && \
-#    apt install -y libcap2-bin && \
-#    setcap cap_net_raw,cap_net_admin,cap_net_bind_service+eip /app/bio-rd && \
-#    useradd --system bio-rd
-#USER bio-rd
+RUN apt update && \
+   apt install -y libcap2-bin && \
+   setcap cap_net_bind_service+eip /app/bio-rd && \
+   useradd --system bio-rd
+USER bio-rd
 VOLUME /config
 EXPOSE 179
 EXPOSE 5566
